# vision-interciclo

./: CMakeLists.txt
data/CT_low_dose_reconstruction_dataset/Original Data/Full Dose/3mm Slice Thickness/Sharp Kernel (D45)/L096/full_3mm_sharp/: L096_FD_3_SHARP_1.CT.0005.0001.2016.01.21.18.13.51.297560.405166379.IMA  L096_FD_3_SHARP_1.CT.0005.0002.2016.01.21.18.13.51.297560.405166403.IMA  L096_FD_3_SHARP_1.CT.0005.0003.2016.01.21.18.13.51.297560.405166427.IMA  L096_FD_3_SHARP_1.CT.0005.0004.2016.01.21.18.13.51.297560.405166451.IMA  L096_FD_3_SHARP_1.CT.0005.0005.2016.01.21.18.13.51.297560.405166475.IMA  L096_FD_3_SHARP_1.CT.0005.0006.2016.01.21.18.13.51.297560.405166499.IMA  L096_FD_3_SHARP_1.CT.0005.0007.2016.01.21.18.13.51.297560.405166523.IMA  L096_FD_3_SHARP_1.CT.0005.0008.2016.01.21.18.13.51.297560.405166547.IMA  L096_FD_3_SHARP_1.CT.0005.0009.2016.01.21.18.13.51.297560.405166571.IMA  L096_FD_3_SHARP_1.CT.0005.0010.2016.01.21.18.13.51.297560.405166595.IMA  L096_FD_3_SHARP_1.CT.0005.0011.2016.01.21.18.13.51.297560.405166619.IMA  L096_FD_3_SHARP_1.CT.0005.0012.2016.01.21.18.13.51.297560.405201501.IMA  L096_FD_3_SHARP_1.CT.0005.0013.2016.01.21.18.13.51.297560.405201525.IMA  L096_FD_3_SHARP_1.CT.0005.0014.2016.01.21.18.13.51.297560.405201549.IMA  L096_FD_3_SHARP_1.CT.0005.0015.2016.01.21.18.13.51.297560.405201573.IMA  (+305 more)
models/: dncnn_compatible.onnx
src/: dnn_denoising.cpp  highlight.cpp  highlight.hpp  itk_loader.cpp  itk_loader.hpp  itk_opencv_bridge.cpp  itk_opencv_bridge.hpp  main.cpp  processing.cpp  processing.hpp
